# ProgramAnalyzer

./: .gitignore  README.md
Team26/Code26/src/spa/: CMakeLists.txt
Team26/Code26/src/spa/src/: ConstantTable.h  PKB.cpp  PKB.h  PKBInterface.h  PKBParserInterface.cpp  PKBParserInterface.h  PKBQueryInterface.h  Procedure.cpp  QueryEvaluator.cpp  QueryEvaluator.h  QueryHandler.h  QueryManager.cpp  QueryManager.h  QueryPreprocessor.cpp  QueryPreprocessor.h  QueryProcessor.cpp  QueryProcessor.h  QueryProcessorTypes.cpp  QueryProcessorTypes.h  QueryResultProjector.cpp  QueryResultProjector.h  QueryStruct.cpp  QueryStruct.h  ResultTable.cpp  ResultTable.h  SPAWrapperClass.cpp  SPAWrapperClass.h  Statement.h  StatementTable.cpp  StatementTable.h  Tokenizer.cpp  Tokenizer.h  VarTable.cpp  VarTable.h  Variable.h
Team26/Code26/src/spa/src/pkb/: AffectStarTable.cpp  AffectStarTable.h  AffectTable.cpp  AffectTable.h  CallStarTable.cpp  CallStarTable.h  CallTable.cpp  CallTable.h  ConstantTable.cpp  ConstantTable.h  ContainerTable.cpp  ContainerTable.h  FollowsStarTable.cpp  FollowsStarTable.h  FollowsTable.cpp  FollowsTable.h  ModifiesTable.cpp  ModifiesTable.h  NextStarTable.cpp  NextStarTable.h  NextTable.cpp  NextTable.h  NodeTable.cpp  NodeTable.h  PKB.cpp  PKB.h  PKBInterface.cpp  PKBInterface.h  PKBParserInterface.h  PKBQueryInterface.h  ParentStarTable.cpp  ParentStarTable.h  ParentTable.cpp  ParentTable.h  Procedure.h  ProcedureNotFoundException.cpp  ProcedureNotFoundException.h  ProcedureTable.cpp  ProcedureTable.h  Statement.h  (+9 more)
Team26/Code26/src/spa/src/qps/: Container.h  QPS_Interface.cpp  QPS_Interface.h  QPS_PKB_Interface.cpp  QPS_PKB_Interface.h  Query.cpp  Query.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryManager.cpp  QueryManager.h  QueryPreprocessor.cpp  QueryPreprocessor.h  QueryProcessorTypes.cpp  QueryProcessorTypes.h  (+8 more)
(+329 files in other folders)
